logs/Slang/generated/hdlconv/hdlconvertor_p191.sv.log
name: hdlconvertor_p191
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p191.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p191.sv:1:1: error: language feature not yet supported
class vector #(int size = 1);
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p191.sv:5:1: error: language feature not yet supported
class stack #(type T = int);
^~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p191.sv:11:1: error: language feature not yet supported
class vector #(int size = 1);
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
